# northwind-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
northwind_mcp/: connection.py  logging_config.py  main.py  server.py
northwind_mcp/data/: README
northwind_mcp/models/: schema.py
northwind_mcp/utils/: utils.py
tests/: conftest.py
tests/integration/: test_mcp_server.py  test_mcp_server_errors.py
tests/unit/: test_connection.py  test_execute_sql.py  test_get_db_schema.py  test_ping.py  test_validate_sql.py
